fix: desktop register spacings

--- a/src/components/TextInput/TextInput.module.scss
+++ b/src/components/TextInput/TextInput.module.scss
@@ -81,7 +81,7 @@
     align-items: center;
 
     &.rightIconError {
-      fill: global.$secondaryRed;
+      color: global.$secondaryRed;
     }
   }
 
