--- a/src/pages/register/components/DesktopHero/Hero.module.scss
+++ b/src/pages/register/components/DesktopHero/Hero.module.scss
@@ -55,7 +55,7 @@
 
   color: $primaryWhite;
 
-  text-align: right;
+  text-align: center;
 
   padding: 2.4rem;
   padding-bottom: 0;
@@ -70,7 +70,7 @@
   }
 
   .description {
-    font-size: 1rem;
+    font-size: 1.6rem;
     font-weight: 400;
 
     margin: 0;
