--- a/src/pages/register/register.module.scss
+++ b/src/pages/register/register.module.scss
@@ -24,7 +24,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 1.6rem;
+    gap: 3.2rem;
 
     margin-right: auto;
     margin-left: auto;
@@ -49,5 +49,11 @@
     justify-content: center;
 
     margin: auto;
+  }
+}
+
+@include from905 {
+  .main {
+    gap: 1.6rem;
   }
 }
